// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextLink Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={Object {}}
        >
          <a
            className="jsx-952623663"
            href="https://kiwi.com"
            onClick={[Function]}
            target="_blank"
          >
            Custom link
          </a>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                  style={undefined}
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          TextLink
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              newTab
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              onClick
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              url
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  https://kiwi.com
                                </span>
                                "
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          Custom link
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          TextLink
                          &gt;
                        </span>
                      </div>
                    </div>
                  </div>
                  <button
                    className="css-gydez8"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextLink Primary link 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Primary link
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              Text links are used in paragraphs when part of the text needs to be actionable. It inherits the visual style of the parent paragraph. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={Object {}}
        >
          <a
            className="jsx-952623663"
            href="https://kiwi.com"
            onClick={[Function]}
            target={undefined}
          >
            Primary link
          </a>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                  style={undefined}
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          TextLink
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              onClick
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              url
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  https://kiwi.com
                                </span>
                                "
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          Primary link
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          TextLink
                          &gt;
                        </span>
                      </div>
                    </div>
                  </div>
                  <button
                    className="css-gydez8"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextLink Secondary link 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Secondary link
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              Text links are used in paragraphs when part of the text needs to be actionable. It inherits the visual style of the parent paragraph. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={Object {}}
        >
          <a
            className="jsx-2409894130"
            href="https://kiwi.com"
            onClick={[Function]}
            target={undefined}
          >
            Secondary link
          </a>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                  style={undefined}
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          TextLink
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              onClick
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              url
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  https://kiwi.com
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              type
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  secondary
                                </span>
                                "
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          Secondary link
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          TextLink
                          &gt;
                        </span>
                      </div>
                    </div>
                  </div>
                  <button
                    className="css-gydez8"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
